syntax = "proto3";

package tpush.srv.push;

service Push {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
	rpc Session(stream SessionRequest) returns (stream SessionResponse) {}
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}


// cmd: login
message LoginReq {
}

message LoginRsp {
}

message SessionRequest {
	int64 seq = 1;
	string cmd = 2;
	int64 uid = 3;
	LoginReq login = 4;
}

message SessionResponse {
	int64 seq = 1;
	string cmd = 2;
	int64 code = 3;
	LoginRsp login = 4;
}
